Fixed navigation bar being covered by some elements

--- a/src/App.css
+++ b/src/App.css
@@ -20,4 +20,5 @@
 	justify-content: center;
 	position: sticky;
 	top: 0;
+	z-index: 1;
 }
